schemas/Home Insurance/v1.0.0/quakes.md
| Excel Column   | Field Name                                                                                                                 | Sample Value        | Comment 1             | Comment 2   | In Kaggle   |
|:---------------|:---------------------------------------------------------------------------------------------------------------------------|:--------------------|:----------------------|:------------|:------------|
| A              | Date                                                                                                                       | 2022-01-16 00:00:00 | Date of Quake         |             | No          |
| B              | Magnitude                                                                                                                  | 6.7                 | On Richter Scale      |             | No          |
| C              | Latitude                                                                                                                   | 44.3678             | North of Boise, Idaho |             | No          |
| D              | Longitude                                                                                                                  | -116.211            |                       |             | No          |
| E              | Country                                                                                                                    | United States       |                       |             | No          |
|                |                                                                                                                            |                     |                       |             |             |
| NOTE:          | File has a list of all signficant earthquakes during transaction period where significant insurance losses may be incurred |                     |                       |             |             |
|                | All quakes are simulated -- but follow geographic and temporal likelihood of earthquakes                                   |                     |                       |             |             |
