schemas/Home Insurance/v1.1.0/quakes.md
| Excel Column   | Field Name                                                                                                                 | Sample Value        | Comment 1                         | Comment 2                                                                                                                                           | In Kaggle   |
|:---------------|:---------------------------------------------------------------------------------------------------------------------------|:--------------------|:----------------------------------|:----------------------------------------------------------------------------------------------------------------------------------------------------|:------------|
| A              | Quake_Event_Index                                                                                                          | 3                   | Numbering [1, N] of N earthquakes | Insurance claims refer to this number if the claim is associated with an earthquake (and have 0 if the claim is not associated with an earthquake). | No          |
| B              | Date                                                                                                                       | 2022-01-16 00:00:00 | Date of Quake                     |                                                                                                                                                     | No          |
| C              | Magnitude                                                                                                                  | 6.7                 | On Richter Scale                  |                                                                                                                                                     | No          |
| D              | Latitude                                                                                                                   | 44.3678             | North of Boise, Idaho             |                                                                                                                                                     | No          |
| E              | Longitude                                                                                                                  | -116.211            |                                   |                                                                                                                                                     | No          |
| F              | Country                                                                                                                    | United States       |                                   |                                                                                                                                                     | No          |
|                |                                                                                                                            |                     |                                   |                                                                                                                                                     |             |
| NOTE:          | File has a list of all signficant earthquakes during transaction period where significant insurance losses may be incurred |                     |                                   |                                                                                                                                                     |             |
|                | All quakes are simulated -- but follow geographic and temporal likelihood of earthquakes                                   |                     |                                   |                                                                                                                                                     |             |
